# DevOps-Course-Starter

./:  .travis.yml   main.tf   service.yaml  .dockerignore  .env.template  .env.test  .gitignore  .travis.yml  README.md  Vagrantfile  deployment.yaml  dockerfile  entrypoint.sh  install.sh  kubectl.sha256  logs.txt  outputs.tf  pyproject.toml  requirements.txt  variables.tf  webhook.sh
documentation/: Untitled Diagram.drawio
tests/: test_IntUnit.py
tests/e2e/: test_e2e.py
tests/int_unit/: test_IntUnit.py
tests_e2e/: test_e2e.py
todo_app/: app.py  classModels.py  flask_config.py  test_app.py
todo_app/data/: session_items.py
todo_app/templates/: edit.html  index.html  layout.html  saveItem.html
todo_app/tests/: test_Int.py  test_IntUnit.py
todo_app/tests_e2e/: test_e2e.py
